syntax = "proto3";

option java_multiple_files = true;
option java_package = "syuparn.floodplain.wallet";
option java_outer_classname = "WalletProto";

package wallet;

service WalletService {
  rpc Create (CreateRequest) returns (CreateReply) {}
}

message CreateRequest {}

message CreateReply {
  Wallet wallet = 1;
}

message Wallet {
  string id = 1;
  uint64 deposit = 2;
  string currency = 3;
}
